# agent_design_pattern

./: .gitignore  LICENSE  README.md  pyproject.toml
.agent/skills/: research-ai-paper.agent.md
.agents/skills/research-ai-paper/: SKILL.md
.github/agents/: research-ai-paper.agent.md
.github/instructions/: python-development.instructions.md  writing-and-running-tests.instructions.md
.github/skills/dspy-development/: SKILL.md  best-practices.md
.github/skills/langchain-development/: SKILL.md  best-practices.md
.github/skills/llamaindex-development/: SKILL.md  best-practices.md
.github/skills/test-writer/: SKILL.md  async-testing.instructions.md
.github/skills/transformers-development/: SKILL.md  best-practices.md
example/: cross_reflection.ipynb  self_reflection.ipynb  self_reflection_transformers.ipynb  sequential.ipynb  simple_loop.ipynb
example/dspy/: coordinator.ipynb  cross_reflection.ipynb  debate.ipynb  parallel.ipynb  retriever.ipynb  self_reflection.ipynb  sequential.ipynb  simple_loop.ipynb  voting.ipynb
example/langchain/: chain.py  coordinator.ipynb  cross_reflection.ipynb  debate.ipynb  parallel.ipynb  retriever.ipynb  self_reflection.ipynb  sequential.ipynb  simple_loop.ipynb  voting.ipynb
example/llamaindex/: chain.py  coordinator.ipynb  cross_reflection.ipynb  debate.ipynb  iterative_refinement.ipynb  parallel.ipynb  retriever.ipynb  self_reflection.ipynb  sequential.ipynb  simple_loop.ipynb  voting.ipynb
example/transformers/: chain.py  coordinator.ipynb  cross_reflection.ipynb  debate.ipynb  parallel.ipynb  self_reflection.ipynb  sequential.ipynb  simple_loop.ipynb  voting.ipynb
src/: agent.py
src/agent_design_pattern/: agent.py  orchestration.py  utils.py
src/core/: pyproject.toml
src/core/src/aap_core/: __init__.py  agent.py  chain.py  dedup.py  dedup_config.py  orchestration.py  policy.py  policy_gradient.py  policy_trainer.py  prompt_augmenter.py  prompt_enhancer.py  retriever.py  types.py  utils.py
src/core/src/aap_core/default_prompts/: see_default_crossover.md  see_default_eda.md  see_default_examiner.md  see_default_improver.md  see_default_lamarckian.md
src/core/src/adp_core/: agent.py  chain.py  guardrail.py  orchestration.py  prompt_enhancer.py  types.py
src/core/tests/: test_agent.py  test_chain.py  test_coordinator_agent.py  test_deduplication_prompt_augmenter.py  test_exploration_module.py  test_orchestration.py  test_policy.py  test_policy_gradient.py  test_policy_trainer.py  test_prompt_optimization_env.py  test_replay_buffer.py  test_retriever.py  test_rl_augmenter_integration.py  test_rl_prompt_augmenter.py  test_see_prompt_augmenter.py  test_types.py  test_utils.py  test_voting_agent.py
src/dspy/: pyproject.toml
src/dspy/src/aap_dspy/: chain.py  retriever.py  utils.py  weaviate.py
src/dspy/tests/: test_retriever.py
src/langchain/: pyproject.toml
src/langchain/src/aap_langchain/: chain.py  retriever.py  utils.py  weaviate.py
src/langchain/src/adp_langchain/: __init__.py  chain.py
src/langchain/tests/: test_retriever.py
src/llamaindex/: pyproject.toml
src/llamaindex/src/aap_llamaindex/: chain.py  retriever.py  utils.py  weaviate.py
src/llamaindex/src/adp_llamaindex/: __init__.py  chain.py
src/llamaindex/tests/: test_retriever.py
src/transformers/: pyproject.toml
src/transformers/src/aap_transformers/: chain.py  weaviate.py
src/transformers/src/adp_transformers/: __init__.py  chain.py
