[project]
name = "agent-design-pattern"
version = "0.0.1"
description = "Agent design pattern / agent orchestration"
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
dependencies = []

[tool.uv.sources]
torch = { path = "../install/torch-2.8.0-cp310-cp310-linux_aarch64.whl" }

[tool.uv.workspace]
members = [
    "example",
]

[dependency-groups]
dev = [
    "accelerate>=1.11.0",
    "langchain-ollama>=1.0.0",
    "load-dotenv>=0.1.0",
    "torch",
    "transformers>=4.57.1",
]
lint = [
    "ruff==0.14.0",
]
