[project]
name = "agent-design-pattern"
version = "0.1.0"
description = "Agent design pattern / agent orchestration"
readme = "README.md"
requires-python = ">=3.10.12"
license = { text = "MIT" }
dependencies = []

[tool.uv.workspace]
members = [
    "src/core",
    "src/langchain",
    "src/llamaindex",
    "src/transformers",
    "src/dspy",
]

[dependency-groups]
dev = [
    "accelerate>=1.11.0",
    "langchain-ollama>=1.0.0",
    "llama-index-llms-ollama>=0.9.0",
    "load-dotenv>=0.1.0",
    "torch",
    "transformers>=4.57.1",
]
lint = [
    "ruff==0.14.0",
]
