[project]
name = "aap_core"
version = "0.1.3.dev1"
description = "Agent design pattern core framework"
readme = "README.md"
license = { text = "MIT" }
keywords = ["agent", "ai", "pattern", "llm"]
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "a2a-sdk>=0.3.12",
    "pandas>=2.0.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: Pydantic :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/quanghona/agent_design_pattern.git"

[dependency-groups]
lint = [
    "ruff==0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
