[project]
name = "aap_dspy"
version = "0.1.2.dev1"
description = "DsPy integration of agent design pattern"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "dspy>=3.0.4",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: Pydantic :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/quanghona/agent_design_pattern.git"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
lint = [
    "ruff==0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
