[project]
name = "aap_dspy"
version = "0.1.1.dev1"
description = "DsPy integration of agent deisgn pattern"
readme = "README.md"
license = { text = "MIT" }
keywords = ["agent", "ai", "pattern", "llm", "dspy"]
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "dspy>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "sentence-transformers>=5.2.0",
    "torch",
]
lint = [
    "ruff==0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
weaviate = [
    "weaviate"
]
