[project]
name = "adp-langchain"
version = "0.1.0"
description = "Langchain integration of agent design pattern"
readme = "README.md"
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "adp-core>=0.1.0",
    "langchain-core>=1.0.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
