[project]
name = "aap_langchain"
version = "0.1.2.dev1"
description = "Langchain integration of agent design pattern"
readme = "README.md"
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
license = { text = "MIT" }
keywords = ["agent", "ai", "pattern", "llm", "langchain"]
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "langchain-core>=1.0.3",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: Pydantic :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/quanghona/agent_design_pattern.git"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "langchain-ollama>=1.0.0",
    "ipykernel",
    "langchain-weaviate>=0.0.6",
    "torch",
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers>=5.2.0",
]

[project.optional-dependencies]
weaviate = [
    "langchain-weaviate"
]
