[project]
name = "aap_llamaindex"
version = "0.2.0"
description = "LlamaIndex integration of agent design pattern"
readme = "README.md"
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
license = { text = "MIT" }
keywords = ["agent", "ai", "pattern", "llm", "llamaindex"]
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "llama-index>=0.14.8",
    "llama-index-vector-stores-faiss>=0.6.0",
    "wandb>=0.26.1",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: Pydantic :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/quanghona/agent_design_pattern.git"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "llama-index-llms-ollama>=0.9.0",
    "ipykernel",
    "llama-index-embeddings-huggingface>=0.6.1",
    "pytest>=9.0.3",
    "faiss-cpu>=1.13.2",
]

[project.optional-dependencies]
weaviate = [
    "llama-index-vector-stores-weaviate"
]
