[project]
name = "aap_transformers"
version = "0.1.1.dev1"
description = "Transformers integration of agent design pattern"
readme = "README.md"
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "transformers>=4.57.1",
    "torch",
    "accelerate>=1.11.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
