[project]
name = "aap_transformers"
version = "0.1.1.dev1"
description = "Transformers integration of agent design pattern"
readme = "README.md"
authors = [
    { name = "Ly Hon Quang", email = "lyhonquang@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10.12"
dependencies = [
    "aap_core>=0.1.0",
    "transformers>=4.57.1",
    "torch",
    "accelerate>=1.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: Pydantic :: 2",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/quanghona/agent_design_pattern.git"


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
weaviate = [
    "weaviate"
]
